bugfix, zoom out on mobile safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,8 @@ body{
 
 body {
     background-color: $background-color;
+    width: 100%;
+    overflow: scroll-y;
 }
 
 #main{
