--- a/src/styles/parts/_counterlist.scss
+++ b/src/styles/parts/_counterlist.scss
@@ -5,6 +5,7 @@
     top: -$counter-height;
     padding-top: $counter-height;
     position: relative;
+    overflow: hidden;
 }
 .counterlist--transition{
     transition: padding 400ms cubic-bezier(0.165, 0.84, 0.44, 1);;
